--- a/index.html
+++ b/index.html
@@ -376,19 +376,19 @@
             <li>
               <a href="#">
                 <span><i class="ri-map-pin-2-fill"></i></span>
-                123 Main Street<br />Sunrise Valley, Evergreen Heights
+               Developer Details
               </a>
             </li>
             <li>
               <a href="#">
                 <span><i class="ri-phone-fill"></i></span>
-                +91 9876543210
+                +27 81 436 6939
               </a>
             </li>
             <li>
               <a href="#">
                 <span><i class="ri-mail-fill"></i></span>
-                info@fitphysique.com
+            peteripaaii99@gmail.com
               </a>
             </li>
           </ul>
